examples/host_env/test/wasmplug.yaml
apiVersion: extensions.istio.io/v1alpha1
kind: WasmPlugin
metadata:
  name: wasm-example
  namespace: default
spec:
  selector:
    matchLabels:
      app: httpbin
  url: oci://johnzheng/wasmws:v5
  pluginConfig:
    header_1: "some_value_1"
    header_2: "another_value"
  vmConfig:
    env:
    - name: TRUST_DOMAIN
      value: "cluster1.local1"
    - name: PATH
      valueFrom: HOST
